--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
                                                 <strong><em>Somos uma empresa especializada em limpeza e
                                                         higienização de estofados, tais como almofadas,
                                                         cadeiras, poltronas, sofás, colchões, carpetes,
-                                                        estofados de carro entre outros.</em></strong>
+                                                        estofados de carro entre outros CNPJ: 38.635.858/0001-03.</em></strong>
                                             </p>
                                         </div>
                                     </div>
