--- a/index.html
+++ b/index.html
@@ -1241,4 +1241,6 @@
 
 </html>
 <script src="index.js"></script>
+
+<script src="https://kit.fontawesome.com/2ca833ad6c.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="assets/fontawesome/css/all.min.css" />
