chore: removing useless script

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <link rel="alternate" type="application/rss+xml" title="Feed para Rapidex Limpeza e Higienização de Estofados »" href="https://rapidexlimpezadeestofados.ga" />
     <link rel="alternate" type="application/rss+xml" title="Feed de comentários para Rapidex Limpeza e Higienização de Estofados »" href="https://rapidexlimpezadeestofados.ga/?feed=comments-rss2" />
     <script type="text/javascript">
-        window._wpemojiSettings = {
+    /*    window._wpemojiSettings = {
             baseUrl: 'https:\/\/s.w.org\/images\/core\/emoji\/13.0.1\/72x72\/',
             ext: '.png',
             svgUrl: 'https:\/\/s.w.org\/images\/core\/emoji\/13.0.1\/svg\/',
@@ -192,7 +192,7 @@
                     (n = t.source || {}).concatemoji
                         ? c(n.concatemoji)
                         : n.wpemoji && n.twemoji && (c(n.twemoji), c(n.wpemoji)));
-        })(window, document, window._wpemojiSettings);
+        })(window, document, window._wpemojiSettings);*/
     </script>
     <style type="text/css">
         img.wp-smiley,
