--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <style lang="en" type="text/css" id="dark-mode-custom-style"></style>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Ads: 413958538 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-413958538"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-413958538');
+</script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="profile" href="https://gmpg.org/xfn/11" />
