Atualização em link de avaliações

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                             <div data-type="column" class="section-title-col">
                                 <h2 class="">Avaliações de Clientes</h2>
                                 <p class="lead">
-                                    Aqui estão algumas avaliações de nossos clientes que
+                                    Aqui estão algumas das mais de 180 avaliações de clientes que
                                     aprovaram nosso serviço
                                 </p>
                             </div>
@@ -668,7 +668,7 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="card y-move bordered" data-type="column">
-                                    <a class="button blue" href="//www.facebook.com/RapidexLimpezaDeEstofados/reviews" target="_blank" data-cp-link="1" rel="noopener">Ver mais Avaliações</a>
+                                    <a class="button blue" href="https://www.google.com/search?q=rapidex+limpeza+e+higieniza%C3%A7%C3%A3o+de+estofados&oq=rapid&aqs=chrome.1.69i60j69i59j0i131i433i512l2j69i57j69i60l3.2007j0j7&sourceid=chrome&ie=UTF-8#lrd=0x94ce535a1ed71535:0x7c1ba6747b054b70,1,,,," target="_blank" data-cp-link="1" rel="noopener">Ver mais de 180 Avaliações</a>
                                 </div>
                             </div>
                         </div>
